--- a/blogpost.html
+++ b/blogpost.html
@@ -1,4 +1,4 @@
-<html>
+git br<html>
     <head>
         <title>El titulo del post</title>
         <link rel="stylesheet" href="css/estilos.css" />
@@ -6,7 +6,8 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Cabecera Bucaramanga
+                Cabecera  Bucaros el real
+
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
