--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,7 @@
                 Cabecera  
 
                 Hyperblog
-                <span id="tagline">Tu blog de cabecera</span>
+                <span id="tagline">Tu blog de Cabecera de confianza</span>
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
