agregue amor y ternura ajajjajaja

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,7 @@
                 Cabecera  
 
                 Hyperblog
-                <span id="tagline">Tu blog de cabecera</span>
+                <span id="tagline">Tu blog Maestro</span>
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
@@ -19,6 +19,7 @@
                     Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
                 
                 <p>Suscribete y dale like</p>
+                <p>dale mucho amor comprension y ternura</p>
             </div>
         </div>
     </body>
