color de fondo logo nuevo y mejor color de header

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,12 +1,13 @@
-<html>
+<html lang="es">
     <head>
+        <meta charset="UTF-8">
         <title>Bienvenido a Hyperblog 2.0</title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
         <div id="container">
             <div id="cabecera">
-                Cabecera  
+                <img id="logo" src="imagenes/dragon.png" />
 
                 Hyperblog
                 <span id="tagline">Tu blog de Cabecera de confianza</span>
@@ -19,7 +20,7 @@
                     Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
                 
                 <p>Suscribete y dale like</p>
-                <p>dale mucho amor comprension y ternura</p>
+                <p>Dale mucho amor comprension y ternura</p>
             </div>
         </div>
     </body>
