--- a/blogpost.html
+++ b/blogpost.html
@@ -21,6 +21,9 @@
                 <p>Suscribete y dale like</p>
                 <p>dale mucho amor comprension y ternura</p>
             </div>
-        </div>
+            <div id="footer">
+            Hecho con amor en Platzi &lt;3
+            </div>
+            </div>
     </body>
 </html>
